# ncpaprop

./: .gitignore  Makefile  Makefile.in  README.md  aclocal.m4  changelog.txt  configure  configure.ac  install_petsc_slepc.bash  install_petsc_slepc_centos.bash  install_petsc_slepc_ubuntu.bash  todo.txt
geoac-ncpaprop/: G2S_GenGrid.py  Makefile  ToyAtmo.met  run_eigray_example.sh
geoac-ncpaprop/Code/: GeoAc3D.RngDep_main.cpp  GeoAc3D_main.cpp
m4/: .ax_ncpa_propagation_prereqs.m4.swp  ac_cxx_mpi.m4  ax_blas.m4  ax_ncpa_messages.m4
manual/ncpaprop_run_manual_TeX/: NCPA_prop_manual.tex  cover_page.tex  legalize.tex  ncpaprop.bib  runtex.sh
samples/: ModBB.options  Modess.options  ModessRD2WCM.options  WMod.options  raytrace.3d.options  xPlotMods.script  xSaveImg.script  xrunModessRD.script  xrunMods.script  xrun_ModBB_batch  xrun_Modess_batch  xrun_papeBB.sh
samples/myTDPape_dir/: 001_papeTL_0.00195312  002_papeTL_0.00390625  003_papeTL_0.00585938  004_papeTL_0.0078125  005_papeTL_0.00976562  019_papeTL_0.0371094  020_papeTL_0.0390625  021_papeTL_0.0410156  022_papeTL_0.0429688  023_papeTL_0.0449219  024_papeTL_0.046875  026_papeTL_0.0507812  027_papeTL_0.0527344  031_papeTL_0.0605469  034_papeTL_0.0664062  035_papeTL_0.0683594  037_papeTL_0.0722656  039_papeTL_0.0761719  041_papeTL_0.0800781  042_papeTL_0.0820312  045_papeTL_0.0878906  046_papeTL_0.0898438  048_papeTL_0.09375  049_papeTL_0.0957031  051_papeTL_0.0996094  053_papeTL_0.103516  055_papeTL_0.107422  056_papeTL_0.109375  059_papeTL_0.115234  060_papeTL_0.117188  063_papeTL_0.123047  065_papeTL_0.126953  067_papeTL_0.130859  068_papeTL_0.132812  069_papeTL_0.134766  071_papeTL_0.138672  072_papeTL_0.140625  074_papeTL_0.144531  075_papeTL_0.146484  076_papeTL_0.148438  (+84 more)
src/atmosphere/: Atmosphere.h  Atmosphere1D.cpp  Atmosphere1D.h  Atmosphere2D.cpp  Atmosphere2D.h  AtmosphericModel.h  AtmosphericProfile.cpp  AtmosphericProfile.h  AtmosphericProperty1D.cpp  AtmosphericProperty1D.h  AtmosphericSpecification.cpp  AtmosphericSpecification.h  JetProfile.cpp  JetProfile.h  Makefile  Makefile.in  Makefile.originalClaus  ProfileGroup.cpp  ProfileGroup.h  ProfileSeriesAtmosphere2D.cpp  ProfileSeriesAtmosphere2D.h  SampledProfile.cpp  SampledProfile.cpp.tmp  SampledProfile.cpp~  SampledProfile.h  SampledProfile.h~  Slice.cpp  Slice.h  Sounding.cpp  Sounding.h  StratifiedAtmosphere2D.cpp  StratifiedAtmosphere2D.h  ToyAtmosphere1D.cpp  ToyAtmosphere1D.h  jetfile.sample
src/cmodbb/: CModBB_lib.cpp  CModBB_lib.h  CModBB_main.cpp  CModess_lib.h  Makefile  Makefile.in  Makefile.orig  ProcessOptionsCBB.cpp  ProcessOptionsCBB.h  SolveCModBB.cpp  SolveCModBB.h
src/cmodess/: CModess_lib.cpp  CModess_lib.h  CModess_main.cpp  Makefile  Makefile.in  Makefile.orig  Modess_lib.h  ProcessOptionsNB.cpp  ProcessOptionsNB.h  SolveCModNB.cpp  SolveCModNB.h
src/common/: Makefile  Makefile.in  Makefile.orig  Makefile.originalClaus  ScalarWithUnits.cpp  ScalarWithUnits.h  VectorWithUnits.cpp  VectorWithUnits.h  anyoption.cpp  anyoption.h  anyoptionextensions.cpp  anyoptionextensions.h  anyoptionvalidator.h  geographic.cpp  geographic.h  parameterset.cpp  parameterset.h  units.cpp  units.h  util.cpp  util.h
src/epade_pe/: Makefile.in  epade_pe.cpp  epade_pe.h  epade_pe_main.cpp  epade_pe_parameters.cpp
src/libbroadband/: ModalBroadbandPropagator.cpp
src/libmodes/: ESSModeSolver.cpp  ESSModeSolver.h  Makefile.in  ModeSolver.cpp  ModeSolver.h  WModeSolver.cpp  modes.h
src/libncpaprop/: BroadbandPropagator.cpp  BroadbandPropagator.h  ESSModeSolver.cpp  ESSModeSolver.h  EigenEngine.cpp  Makefile.in  ModalBroadbandPropagator.cpp  ModeSolver.cpp  ModeSolver.h  WModeSolver.cpp  WModeSolver.h
src/libpe/: EPadeSolver.cpp  EPadeSolver.h  Makefile.in
src/modbb/: Makefile  Makefile.in  Makefile.orig  ModBB_lib.cpp  ModBB_lib.cpp.upto_20150720  ModBB_lib.h  ModBB_lib_old_20130709.cpp  ModBB_main.cpp  ProcessOptionsBB.cpp  ProcessOptionsBB.h  SolveModBB.cpp  SolveModBB.h  SolveModBB_Modess.cpp  SolveModBB_Modess.h  SolveWMod.cpp  modbb_parameters.cpp
src/modess/: Makefile  Makefile.in  Makefile.orig  Modess_lib.cpp  Modess_lib.h  Modess_main.cpp  ProcessOptionsNB.cpp  ProcessOptionsNB.h  SolveModNB.cpp  SolveModNB.cpp.old  SolveModNB.h  modess_parameters.cpp
src/modess_rd_1wcm/: How_to_run_ModESSRD1WCM.txt  Makefile  Makefile.in  Makefile.orig  ModessRD_lib.cpp  ModessRD_lib.h  ModessRD_main.cpp  ProcessOptionsNBRD.cpp  ProcessOptionsNBRD.h  SolveModNB.cpp  SolveModNB.h
src/modess_rd_2wcm/: Makefile  Matlab_ModessRDCM.m  ModessRDCM_lib.cpp  ModessRDCM_lib.h  ModessRDCM_main.cpp  ProcessOptionsNBRDCM.cpp  ProcessOptionsNBRDCM.h  SolveModNBRDCM.cpp  SolveModNBRDCM.h
src/pade_pe/: Makefile  Makefile.in  Makefile.orig  ProcessOptionsPE.cpp  ProcessOptionsPE.h  SampledProfile.cpp  SampledProfile.h  atmlib.cpp  atmlib.h  binaryreader.cpp.old  binaryreader.h.old  modalstarter_toymodel  pe_main.cpp  plot_view_PE_output_Mlab.m
src/raytrace/: Acoustic2DEquationSet.cpp  Acoustic2DEquationSet.h  Acoustic3DEquationSet.cpp  Acoustic3DEquationSet.h  AcousticEquationSet.cpp  AcousticEquationSet.h  AcousticSimpleEquationSet.cpp  AcousticSimpleEquationSet.h  AtmosphericBreakConditions.cpp  AtmosphericBreakConditions.h  BreakConditions.h  EquationSet.h  GeneralBreakConditions.cpp  GeneralBreakConditions.h  Makefile  Makefile.in  Makefile.orig  ODESystem.cpp  ODESystem.h  ODESystemBreakCondition.cpp  ODESystemBreakCondition.h  Propagation.h  ReflectionCondition2D.cpp  ReflectionCondition2D.h  ReflectionCondition3D.cpp  ReflectionCondition3D.h  jetfile.sample  raytrace.2d.cpp  raytrace.2d.cpp~  raytrace.3d.cpp  raytrace.3d.cpp~  (+1 more)
test/: Makefile  Makefile.in  colcount  coldiff  compare_CModess_test  compare_ModBB_test  compare_ModessRD1WCM_test  compare_Modess_test  compare_WMod_test  compare_pape_test  compare_raytrace.2d_test  compare_raytrace.3d_test  run_CModess_test.bash  run_ModBB_test.bash  run_ModessRD1WCM_test.bash  run_Modess_test.bash  run_WMod_test.bash  run_pape_test.bash  run_raytrace.2d_test.bash  run_raytrace.3d_test.bash  testlog.txt
(+257 files in other folders)
